--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "lint:src": "npm run lint src",
     "compile": "tsc -p tsconfig.json",
     "compile:publish": "tsc -p tsconfig-publish.json",
-    "test": "jest -c jest.config.js"
+    "test:src": "jest -c jest.config.js",
+    "prepare": "npm run compile:publish && husky"
   },
   "repository": {
     "type": "git",
@@ -29,6 +30,7 @@
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-plugin-import": "^2.29.1",
     "eslint-plugin-jest": "^28.5.0",
+    "husky": "^9.0.11",
     "jest": "^29.7.0",
     "sinon": "^18.0.0",
     "ts-jest": "^29.1.4",
