--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "compile": "tsc -p tsconfig.json",
     "compile:publish": "tsc -p tsconfig-publish.json",
     "test:src": "jest -c jest.config.js",
-    "prepare": "npm run compile:publish && husky"
+    "prepare": "npm run compile:publish && husky",
+    "version": "auto-changelog -p --template ./changelog.template.hbs && git add CHANGELOG.md"
   },
   "repository": {
     "type": "git",
@@ -26,6 +27,7 @@
     "@types/jest": "^29.5.12",
     "@typescript-eslint/eslint-plugin": "^7.11.0",
     "@typescript-eslint/parser": "^7.11.0",
+    "auto-changelog": "^2.4.0",
     "eslint": "^8.57.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-plugin-import": "^2.29.1",
