task: Setup web

--- a/.eslintrc
+++ b/.eslintrc
@@ -18,9 +18,10 @@
     }
   },
 
-//  "env": {
+  "env": {
+    "browser": true
 //    "jest/globals": true
-//  },
+  },
 
   "rules": {
     "indent": ["error", 2, { "SwitchCase": 1 }],
